@@ -430,11 +430,21 @@ QString KrView::statistics()
         if (it->getVfile()->vfile_getSize() > 0)
             _countSize += it->getVfile()->vfile_getSize();
     }
-    QString tmp = i18n("%1 out of %2, %3 (%4) out of %5 (%6)",
-                       _numSelected, _count, KIO::convertSize(_selectedSize),
-                       KRpermHandler::parseSize(_selectedSize),
-                       KIO::convertSize(_countSize),
-                       KRpermHandler::parseSize(_countSize));
+
+    QString tmp;
+    KConfigGroup grp(_config, "Look&Feel");
+    if(grp.readEntry("Show Size In Bytes", true)) {
+        tmp = i18n("%1 out of %2, %3 (%4) out of %5 (%6)",
+                    _numSelected, _count, KIO::convertSize(_selectedSize),
+                    KRpermHandler::parseSize(_selectedSize),
+                    KIO::convertSize(_countSize),
+                    KRpermHandler::parseSize(_countSize));
+    } else {
+        tmp = i18n("%1 out of %2, %3 out of %4",
+                    _numSelected, _count, KIO::convertSize(_selectedSize),
+                    KIO::convertSize(_countSize));
+    }
+
     // notify if we're running a filtered view
     if (filter() != KrViewProperties::All)
         tmp = ">> [ " + filterMask().nameFilter() + " ]  " + tmp;
