@@ -15,7 +15,7 @@
         <widget>vfsError</widget>
         <widget>clientArea</widget>
         <layout type="horizontal">
-            <widget>totals</widget>
+            <widget>totalsBar</widget>
             <widget>previewProgress</widget>
             <widget>inlineRefreshCancelButton</widget>
             <widget>popupBtn</widget>
