@@ -1,3 +1,6 @@
+    ADDED: options: Panel > General > Status/Totalsbar settings >
+           Show Statusbar, Show Totalsbar, Show Size In Bytes,
+           Show free disk space in the Totalsbar
     ADDED: option: Look&Feel > Quicksearch > "Up/Down cancels Quicksearch"
     ADDED: dbus interface: org.krusader.PanelManager.newTab(QString url) / newTabs(QStringList)
     ADDED: url command-line argument
